add role tests
