# start/routes/roles.ts
@@ -5,4 +5,5 @@ Route.group(() => {
     Route.post("/roles","RolesController.store");
     Route.get("/roles/:id","RolesController.show");
     Route.put("/roles/:id","RolesController.update");
+    Route.delete("/roles/:id","RolesController.destroy");
 })
